--- a/templates/index.html
+++ b/templates/index.html
@@ -11,10 +11,23 @@
             background-color: #f8f8f8;
             padding: 20px;
         }
-        h1 {
-            color: #333366;
+        header {
+            background-color: #333366;
+            color: white;
+            padding: 10px;
+            text-align: center;
+            margin-bottom: 20px;
         }
-        form {
+        header img {
+            max-width: 100px;
+            margin: 0 auto 20px auto;
+            display: block;
+        }
+        h1 {
+            font-size: 25px ;
+            margin-top: 50px;
+        }
+        .form-group {
             margin-bottom: 30px;
         }
         label, input {
@@ -24,12 +37,16 @@
             padding: 10px 20px;
             background-color: #333366;
             color: #fff;
+            font-size: 16px;
             border: none;
             border-radius: 5px;
             cursor: pointer;
         }
         button:hover {
             background-color: #555588;
+        }
+        h2, h3 {
+            color: #444444;
         }
         ul {
             list-style-type: none;
@@ -46,23 +63,44 @@
             padding: 15px;
             border-radius: 5px;
         }
+        .results, .message {
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 5px;
+            margin-top: 20px;
+        }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>Pricing Tool</h1>
+
+        <img src="/static/Podscribe_logo.png" alt="Podscribe Logo" style="max-width:200px;">
+
+
+        <h1>Podscribe Pricing Calculator</h1>
 
         <form method="POST">
             <div class="form-group">
-                <label for="impression_cap">Monthly Attribution Impression Cap:</label>
-                <input type="number" id="impression_cap" name="impression_cap" class="form-control">
+                <label for="impression_cap"> Monthly Impression Cap:</label>
+                <input type="text" id="impression_cap" name="impression_cap" class="form-control" placeholder="e.g., 1,000,000">
             </div>
             <div class="form-group">
-                <label for="aircheck_cap">Airchecks/mo:</label>
-                <input type="number" id="aircheck_cap" name="aircheck_cap" class="form-control">
+                <label for="aircheck_cap">Monthly Airchecks Cap:</label>
+                <input type="number" id="aircheck_cap" name="aircheck_cap" class="form-control" placeholder="e.g., 0">
             </div>
-            <button type="submit" class="btn btn-primary">Calculate</button>
+            <button type="submit" class="btn btn-primary">Calculate Pricing</button>
         </form>
+
+
+<script>
+document.getElementById('impression_cap').addEventListener('input', function (event) {
+    let value = event.target.value.replace(/,/g, '');
+    value = Number(value).toString();
+    value = value.replace(/\B(?=(\d{3})+(?!\d))/g, ",");
+    event.target.value = value;
+});
+</script>
+
 
         {% if error %}
             <h2 class="text-danger">Error</h2>
